# neobert-he

./: .gitignore  README.md  pyproject.toml
docs/: ARCHITECTURE.md  TRAINING.md
scripts/: prepare_dataset.sh  train_scratch.sh  upload_checkpoint.sh
src/: checkpoint.py  config.py  decode.py  encoder.py  infer.py  model.py  optimizer.py  train.py
src/neobert/: model.py
