[project]
name = "neobert-he-mlm"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "accelerate>=1.13.0",
    "datasets>=4.8.4",
    "huggingface-hub>=1.9.0",
    "setuptools<81",
    "tensorboard>=2.20.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers[torch]>=5.5.0",
    "xformers>=0.0.35",
]

[project.optional-dependencies]
cu130 = ["torch>=2.11.0"]
cu128 = ["torch>=2.11.0"]

[tool.uv]
conflicts = [
  [{ extra = "cu130" }, { extra = "cu128" }],
]

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = [
  { index = "pytorch-cu130", extra = "cu130" },
  { index = "pytorch-cu128", extra = "cu128" },
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]